generated/v1.31.0/index.md
# Bicep Types
## admissionregistration.k8s.io
### admissionregistration.k8s.io/mutatingwebhookconfiguration
* **Link**: [v1](admissionregistration.k8s.io/v1/types.md#resource-admissionregistrationk8siomutatingwebhookconfigurationv1)

### admissionregistration.k8s.io/validatingadmissionpolicy
* **Link**: [v1](admissionregistration.k8s.io/v1/types.md#resource-admissionregistrationk8siovalidatingadmissionpolicyv1)
* **Link**: [v1alpha1](admissionregistration.k8s.io/v1alpha1/types.md#resource-admissionregistrationk8siovalidatingadmissionpolicyv1alpha1)
* **Link**: [v1beta1](admissionregistration.k8s.io/v1beta1/types.md#resource-admissionregistrationk8siovalidatingadmissionpolicyv1beta1)

### admissionregistration.k8s.io/validatingadmissionpolicybinding
* **Link**: [v1](admissionregistration.k8s.io/v1/types.md#resource-admissionregistrationk8siovalidatingadmissionpolicybindingv1)
* **Link**: [v1alpha1](admissionregistration.k8s.io/v1alpha1/types.md#resource-admissionregistrationk8siovalidatingadmissionpolicybindingv1alpha1)
* **Link**: [v1beta1](admissionregistration.k8s.io/v1beta1/types.md#resource-admissionregistrationk8siovalidatingadmissionpolicybindingv1beta1)

### admissionregistration.k8s.io/validatingwebhookconfiguration
* **Link**: [v1](admissionregistration.k8s.io/v1/types.md#resource-admissionregistrationk8siovalidatingwebhookconfigurationv1)

## apiextensions.k8s.io
### apiextensions.k8s.io/customresourcedefinition
* **Link**: [v1](apiextensions.k8s.io/v1/types.md#resource-apiextensionsk8siocustomresourcedefinitionv1)

## apiregistration.k8s.io
### apiregistration.k8s.io/apiservice
* **Link**: [v1](apiregistration.k8s.io/v1/types.md#resource-apiregistrationk8sioapiservicev1)

## apps
### apps/controllerrevision
* **Link**: [v1](apps/v1/types.md#resource-appscontrollerrevisionv1)

### apps/daemonset
* **Link**: [v1](apps/v1/types.md#resource-appsdaemonsetv1)

### apps/deployment
* **Link**: [v1](apps/v1/types.md#resource-appsdeploymentv1)

### apps/replicaset
* **Link**: [v1](apps/v1/types.md#resource-appsreplicasetv1)

### apps/statefulset
* **Link**: [v1](apps/v1/types.md#resource-appsstatefulsetv1)

## autoscaling
### autoscaling/horizontalpodautoscaler
* **Link**: [v1](autoscaling/v1/types.md#resource-autoscalinghorizontalpodautoscalerv1)
* **Link**: [v2](autoscaling/v2/types.md#resource-autoscalinghorizontalpodautoscalerv2)

### autoscaling/scale
* **Link**: [v1](autoscaling/v1/types.md#resource-autoscalingscalev1)

## batch
### batch/cronjob
* **Link**: [v1](batch/v1/types.md#resource-batchcronjobv1)

### batch/job
* **Link**: [v1](batch/v1/types.md#resource-batchjobv1)

## certificates.k8s.io
### certificates.k8s.io/certificatesigningrequest
* **Link**: [v1](certificates.k8s.io/v1/types.md#resource-certificatesk8siocertificatesigningrequestv1)

### certificates.k8s.io/clustertrustbundle
* **Link**: [v1alpha1](certificates.k8s.io/v1alpha1/types.md#resource-certificatesk8sioclustertrustbundlev1alpha1)

## coordination.k8s.io
### coordination.k8s.io/lease
* **Link**: [v1](coordination.k8s.io/v1/types.md#resource-coordinationk8sioleasev1)

### coordination.k8s.io/leasecandidate
* **Link**: [v1alpha1](coordination.k8s.io/v1alpha1/types.md#resource-coordinationk8sioleasecandidatev1alpha1)

## core
### core/configmap
* **Link**: [v1](core/v1/types.md#resource-coreconfigmapv1)

### core/endpoints
* **Link**: [v1](core/v1/types.md#resource-coreendpointsv1)

### core/event
* **Link**: [v1](core/v1/types.md#resource-coreeventv1)

### core/limitrange
* **Link**: [v1](core/v1/types.md#resource-corelimitrangev1)

### core/namespace
* **Link**: [v1](core/v1/types.md#resource-corenamespacev1)

### core/node
* **Link**: [v1](core/v1/types.md#resource-corenodev1)

### core/persistentvolume
* **Link**: [v1](core/v1/types.md#resource-corepersistentvolumev1)

### core/persistentvolumeclaim
* **Link**: [v1](core/v1/types.md#resource-corepersistentvolumeclaimv1)

### core/pod
* **Link**: [v1](core/v1/types.md#resource-corepodv1)

### core/podtemplate
* **Link**: [v1](core/v1/types.md#resource-corepodtemplatev1)

### core/replicationcontroller
* **Link**: [v1](core/v1/types.md#resource-corereplicationcontrollerv1)

### core/resourcequota
* **Link**: [v1](core/v1/types.md#resource-coreresourcequotav1)

### core/secret
* **Link**: [v1](core/v1/types.md#resource-coresecretv1)

### core/service
* **Link**: [v1](core/v1/types.md#resource-coreservicev1)

### core/serviceaccount
* **Link**: [v1](core/v1/types.md#resource-coreserviceaccountv1)

## discovery.k8s.io
### discovery.k8s.io/endpointslice
* **Link**: [v1](discovery.k8s.io/v1/types.md#resource-discoveryk8sioendpointslicev1)

## events.k8s.io
### events.k8s.io/event
* **Link**: [v1](events.k8s.io/v1/types.md#resource-eventsk8sioeventv1)

## flowcontrol.apiserver.k8s.io
### flowcontrol.apiserver.k8s.io/flowschema
* **Link**: [v1](flowcontrol.apiserver.k8s.io/v1/types.md#resource-flowcontrolapiserverk8sioflowschemav1)
* **Link**: [v1beta3](flowcontrol.apiserver.k8s.io/v1beta3/types.md#resource-flowcontrolapiserverk8sioflowschemav1beta3)

### flowcontrol.apiserver.k8s.io/prioritylevelconfiguration
* **Link**: [v1](flowcontrol.apiserver.k8s.io/v1/types.md#resource-flowcontrolapiserverk8sioprioritylevelconfigurationv1)
* **Link**: [v1beta3](flowcontrol.apiserver.k8s.io/v1beta3/types.md#resource-flowcontrolapiserverk8sioprioritylevelconfigurationv1beta3)

## internal.apiserver.k8s.io
### internal.apiserver.k8s.io/storageversion
* **Link**: [v1alpha1](internal.apiserver.k8s.io/v1alpha1/types.md#resource-internalapiserverk8siostorageversionv1alpha1)

## networking.k8s.io
### networking.k8s.io/ingress
* **Link**: [v1](networking.k8s.io/v1/types.md#resource-networkingk8sioingressv1)

### networking.k8s.io/ingressclass
* **Link**: [v1](networking.k8s.io/v1/types.md#resource-networkingk8sioingressclassv1)

### networking.k8s.io/ipaddress
* **Link**: [v1beta1](networking.k8s.io/v1beta1/types.md#resource-networkingk8sioipaddressv1beta1)

### networking.k8s.io/networkpolicy
* **Link**: [v1](networking.k8s.io/v1/types.md#resource-networkingk8sionetworkpolicyv1)

### networking.k8s.io/servicecidr
* **Link**: [v1beta1](networking.k8s.io/v1beta1/types.md#resource-networkingk8sioservicecidrv1beta1)

## node.k8s.io
### node.k8s.io/runtimeclass
* **Link**: [v1](node.k8s.io/v1/types.md#resource-nodek8sioruntimeclassv1)

## policy
### policy/poddisruptionbudget
* **Link**: [v1](policy/v1/types.md#resource-policypoddisruptionbudgetv1)

## rbac.authorization.k8s.io
### rbac.authorization.k8s.io/clusterrole
* **Link**: [v1](rbac.authorization.k8s.io/v1/types.md#resource-rbacauthorizationk8sioclusterrolev1)

### rbac.authorization.k8s.io/clusterrolebinding
* **Link**: [v1](rbac.authorization.k8s.io/v1/types.md#resource-rbacauthorizationk8sioclusterrolebindingv1)

### rbac.authorization.k8s.io/role
* **Link**: [v1](rbac.authorization.k8s.io/v1/types.md#resource-rbacauthorizationk8siorolev1)

### rbac.authorization.k8s.io/rolebinding
* **Link**: [v1](rbac.authorization.k8s.io/v1/types.md#resource-rbacauthorizationk8siorolebindingv1)

## resource.k8s.io
### resource.k8s.io/deviceclass
* **Link**: [v1alpha3](resource.k8s.io/v1alpha3/types.md#resource-resourcek8siodeviceclassv1alpha3)

### resource.k8s.io/podschedulingcontext
* **Link**: [v1alpha3](resource.k8s.io/v1alpha3/types.md#resource-resourcek8siopodschedulingcontextv1alpha3)

### resource.k8s.io/resourceclaim
* **Link**: [v1alpha3](resource.k8s.io/v1alpha3/types.md#resource-resourcek8sioresourceclaimv1alpha3)

### resource.k8s.io/resourceclaimtemplate
* **Link**: [v1alpha3](resource.k8s.io/v1alpha3/types.md#resource-resourcek8sioresourceclaimtemplatev1alpha3)

### resource.k8s.io/resourceslice
* **Link**: [v1alpha3](resource.k8s.io/v1alpha3/types.md#resource-resourcek8sioresourceslicev1alpha3)

## scheduling.k8s.io
### scheduling.k8s.io/priorityclass
* **Link**: [v1](scheduling.k8s.io/v1/types.md#resource-schedulingk8siopriorityclassv1)

## storage.k8s.io
### storage.k8s.io/csidriver
* **Link**: [v1](storage.k8s.io/v1/types.md#resource-storagek8siocsidriverv1)

### storage.k8s.io/csinode
* **Link**: [v1](storage.k8s.io/v1/types.md#resource-storagek8siocsinodev1)

### storage.k8s.io/csistoragecapacity
* **Link**: [v1](storage.k8s.io/v1/types.md#resource-storagek8siocsistoragecapacityv1)

### storage.k8s.io/storageclass
* **Link**: [v1](storage.k8s.io/v1/types.md#resource-storagek8siostorageclassv1)

### storage.k8s.io/volumeattachment
* **Link**: [v1](storage.k8s.io/v1/types.md#resource-storagek8siovolumeattachmentv1)

### storage.k8s.io/volumeattributesclass
* **Link**: [v1alpha1](storage.k8s.io/v1alpha1/types.md#resource-storagek8siovolumeattributesclassv1alpha1)
* **Link**: [v1beta1](storage.k8s.io/v1beta1/types.md#resource-storagek8siovolumeattributesclassv1beta1)

## storagemigration.k8s.io
### storagemigration.k8s.io/storageversionmigration
* **Link**: [v1alpha1](storagemigration.k8s.io/v1alpha1/types.md#resource-storagemigrationk8siostorageversionmigrationv1alpha1)

